# SAllocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Doc/: 内存的设计ing.excalidraw
MemDetector/: CMakeLists.txt  Log.h
MemDetector/include/: MemDetector.hpp
MemDetector/include/intern/: addr2sym.hpp
MemDetector/source/: MemDetector.cpp
MemoryPool/: CMakeLists.txt
MemoryPool/include/: Allocator.hpp  MemoryPool.hpp
MemoryPool/source/: MemortPool.cpp
include/: JAllocator.hpp  SAllocator.hpp  static_for.hpp
include/JAllocatorImpl/: Arena.hpp  Bin.hpp  Block.hpp  Chunk.hpp  Helper.hpp  MemoryPoolConfig.hpp  Region.hpp  SysApi.cpp  SysApi.h  SysApi.hpp  ThreadLocalList.hpp
src/: SysApi.cpp  main.cpp
